# Python-DuckDB

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
Code/pipeline/: extract.py  load.py  transform.py
appCode/: main.py
appCode/pipeline/: extract.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: test_pipeline.py
