[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["Gustavo Santos <gurezendes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
